force-app/main/default/objects/Policy_Endorsement__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>