force-app/main/default/objects/Policy_Endorsement__c/fields/Prior_Act_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Act_Date__c</fullName>
    <label>Prior Act Date</label>
    <type>Date</type>
</CustomField>