force-app/main/default/objects/Policy_Endorsement__c/fields/Prior_Act_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Prior_Act_Date_Text__c</fullName>
    <label>Prior Act Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>