force-app/main/default/objects/Policy_Endorsement__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <description>The amount that is to be returned to the policy holder if the policy is cancelled before expiration.</description>
    <label>Return Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>