force-app/main/default/objects/Policy_Endorsement__c/fields/Refund_Amountformula__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amountformula__c</fullName>
    <formula>Refund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>