force-app/main/default/objects/Policy_Endorsement__c/fields/report_effective_Date__c.field-meta.xml
<CustomField>
    <fullName>report_effective_Date__c</fullName>
    <formula>Endorsement_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>report_effective_Date</label>
    <type>Date</type>
</CustomField>