force-app/main/default/objects/Policy_Endorsement__c/fields/Second_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Second_Aggregate__c</fullName>
    <label>Second Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>