force-app/main/default/objects/Policy_Endorsement__c/fields/Second_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Effective_Date__c</fullName>
    <label>Second Effective Date</label>
    <type>Date</type>
</CustomField>