force-app/main/default/objects/Policy_Endorsement__c/fields/Second_Per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Second_Per_Claim__c</fullName>
    <label>Second Per Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>