force-app/main/default/objects/Policy_Endorsement__c/fields/Step_Override__c.field-meta.xml
<CustomField>
    <fullName>Step_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step Override</label>
    <type>Checkbox</type>
</CustomField>