force-app/main/default/objects/Policy_Endorsement__c/fields/Step_Override_Value__c.field-meta.xml
<CustomField>
    <fullName>Step_Override_Value__c</fullName>
    <label>Step Override Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>