force-app/main/default/objects/Policy_Endorsement__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>