force-app/main/default/objects/Policy_Endorsement__c/fields/TermFormula__c.field-meta.xml
<CustomField>
    <fullName>TermFormula__c</fullName>
    <formula>Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>