force-app/main/default/objects/Policy_Endorsement__c/fields/Third_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Third_Aggregate__c</fullName>
    <label>Third Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>