force-app/main/default/objects/Policy_Endorsement__c/fields/Third_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Effective_Date__c</fullName>
    <label>Third Effective Date</label>
    <type>Date</type>
</CustomField>