force-app/main/default/objects/Policy_Endorsement__c/fields/Title_Insurance_Agency__c.field-meta.xml
<CustomField>
    <fullName>Title_Insurance_Agency__c</fullName>
    <label>Title Insurance Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>