force-app/main/default/objects/Policy_Endorsement__c/fields/Total_Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Payable__c</fullName>
    <formula>X5x5_Commission_Payable__c +  X10x10_Commission_Payable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>