force-app/main/default/objects/Policy_Endorsement__c/fields/Total_Terms__c.field-meta.xml
<CustomField>
    <fullName>Total_Terms__c</fullName>
    <label>Total Terms</label>
    <summaryForeignKey>Policy_Endorsement_Term__c.Endorsement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>