force-app/main/default/objects/Policy_Endorsement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(OR(ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Owner&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Officer&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Partner&apos;)),&apos;O&apos;, IF(OR(ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Employee&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Associate&apos;)),&apos;E&apos;,IF(OR(ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Shareholder&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Member&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Director&apos;)),&apos;S&apos;,IF(OR(ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Independent Contractor&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Of Counsel&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Contract Employee&apos;),ISPICKVAL(Lawyer__r.Contact__r.Contact_Role__c,&apos;Temporary Staff Lawyer&apos;)),&apos;I&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>