force-app/main/default/objects/Policy_Endorsement__c/fields/Valid_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until_Date__c</fullName>
    <label>Valid Until Date</label>
    <type>Date</type>
</CustomField>