force-app/main/default/objects/Policy_Endorsement__c/fields/View_PDF__c.field-meta.xml
<CustomField>
    <fullName>View_PDF__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Endorsement_Pdf?id=&quot;&amp; Id &amp; &quot;&amp;number=&quot; &amp; Endorsement_Number__c &amp; &quot;&amp;version=&quot; &amp; Endorsement_Version__c , &quot;View PDF&quot;,&quot;_blank&quot;)</formula>
    <label>View PDF</label>
    <type>Text</type>
</CustomField>