force-app/main/default/objects/Policy_Endorsement__c/fields/X10x10_Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>X10x10_Commission_Payable__c</fullName>
    <formula>Premium_10_10__c -  X10x10_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10x10 Commission Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>