force-app/main/default/objects/Policy_Endorsement__c/fields/X5x5_Commission__c.field-meta.xml
<CustomField>
    <fullName>X5x5_Commission__c</fullName>
    <formula>Premium_5_5__c * 0.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5x5 Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>