force-app/main/default/objects/Policy_Endorsement__c/fields/X5x5_Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>X5x5_Commission_Payable__c</fullName>
    <formula>Premium_5_5__c - X5x5_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5x5 Commission Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>