force-app/main/default/objects/Policy_Endorsement__c/recordTypes/AL_Add_Lawyer_Transaction.recordType-meta.xml
<RecordType>
    <fullName>AL_Add_Lawyer_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 152 Adding an Attorney Endorsement</label>
</RecordType>