force-app/main/default/objects/Policy_Endorsement__c/recordTypes/AP_Adjust_Premium_Transaction.recordType-meta.xml
<RecordType>
    <fullName>AP_Adjust_Premium_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>AP Adjust Premium Endorsement</label>
</RecordType>