force-app/main/default/objects/Policy_Endorsement__c/recordTypes/CC_Change_Coverage_Transaction.recordType-meta.xml
<RecordType>
    <fullName>CC_Change_Coverage_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 120 Limit of Liability Endorsement</label>
</RecordType>