force-app/main/default/objects/Policy_Endorsement__c/recordTypes/CL_Change_Lawyer_Transaction.recordType-meta.xml
<RecordType>
    <fullName>CL_Change_Lawyer_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>CL Change Lawyer Endorsement</label>
</RecordType>