force-app/main/default/objects/Policy_Endorsement__c/recordTypes/CP_Cancel_Policy_Transaction.recordType-meta.xml
<RecordType>
    <fullName>CP_Cancel_Policy_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 190 Cancellation of Coverage</label>
</RecordType>