force-app/main/default/objects/Policy_Endorsement__c/recordTypes/DL_Delete_Lawyer_Transaction.recordType-meta.xml
<RecordType>
    <fullName>DL_Delete_Lawyer_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 153 Deleting an Attorney Endorsement</label>
</RecordType>