force-app/main/default/objects/Policy_Endorsement__c/recordTypes/ERE.recordType-meta.xml
<RecordType>
    <fullName>ERE</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 107 PURCHASE EXTENDED REPORTING ENDORSEMENT</label>
</RecordType>