force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_101_SPECIFIC_ATTORNEY_S_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_101_SPECIFIC_ATTORNEY_S_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 101A SPECIFIC ATTORNEY(S) EXCLUSION ENDORSEMENT</label>
</RecordType>