force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_102_PRIOR_ACTS_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_102_PRIOR_ACTS_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 102 PRIOR ACTS EXCLUSION ENDORSEMENT</label>
</RecordType>