force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_104_SPECIFIC_ENTITY_EXCLUSIONS_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_104_SPECIFIC_ENTITY_EXCLUSIONS_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 104 SPECIFIC ENTITY EXCLUSIONS ENDORSEMENT</label>
</RecordType>