force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_106_AMENDMENT_OF_EXTENDED_REPORTING_PERIOD.recordType-meta.xml
<RecordType>
    <fullName>IL_106_AMENDMENT_OF_EXTENDED_REPORTING_PERIOD</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 106 AMENDMENT OF EXTENDED REPORTING PERIOD</label>
</RecordType>