force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_107B_U_S_Active_Duty_Military_Service_Extended_Reporting_Period_Election.recordType-meta.xml
<RecordType>
    <fullName>IL_107B_U_S_Active_Duty_Military_Service_Extended_Reporting_Period_Election</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 107B U.S. Active Duty Military Service Extended Reporting Period Election</label>
</RecordType>