force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_107C_Unlimited_Death_or_Disability_Extended_Reporting_Period_Election.recordType-meta.xml
<RecordType>
    <fullName>IL_107C_Unlimited_Death_or_Disability_Extended_Reporting_Period_Election</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 107C Unlimited Death or Disability Extended Reporting Period Election</label>
</RecordType>