force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_107D_Unlimited_Retirement_Extended_Reporting_Period_Election_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_107D_Unlimited_Retirement_Extended_Reporting_Period_Election_Endorsement</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 107D Unlimited Retirement Extended Reporting Period Election Endorsement</label>
</RecordType>