force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_110_SECURITIES_BOND_AND_LIMITED_PARTNERSHIP_EXCLUSION.recordType-meta.xml
<RecordType>
    <fullName>IL_110_SECURITIES_BOND_AND_LIMITED_PARTNERSHIP_EXCLUSION</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 110 SECURITIES, BOND AND LIMITED PARTNERSHIP EXCLUSION</label>
</RecordType>