force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_115_UNLIMITED_PURCHASED_EXTENDED.recordType-meta.xml
<RecordType>
    <fullName>IL_115_UNLIMITED_PURCHASED_EXTENDED</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 115 UNLIMITED PURCHASED EXTENDED</label>
</RecordType>