force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_130_LIMIT_OF_LIABILITY_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_130_LIMIT_OF_LIABILITY_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 130 LIMIT OF LIABILITY ENDORSEMENT</label>
</RecordType>