force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_150_POLICY_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_150_POLICY_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 150 POLICY ENDORSEMENT</label>
</RecordType>