force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_151_Name_Change_and_Address_Change_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_151_Name_Change_and_Address_Change_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 151 Name Change Endorsement</label>
</RecordType>