force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_160_CONTRACTUAL_LIABILITY_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_160_CONTRACTUAL_LIABILITY_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 160 CONTRACTUAL LIABILITY EXCLUSION ENDORSEMENT</label>
</RecordType>