force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_161_SPECIFIC_AREA_OF_PRACTICE_EXCLUSION_ENDORSMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_161_SPECIFIC_AREA_OF_PRACTICE_EXCLUSION_ENDORSMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 161 SPECIFIC AREA OF PRACTICE EXCLUSION ENDORSEMENT</label>
</RecordType>