force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_162_FDCPA_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_162_FDCPA_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 162 FDCPA ENDORSEMENT</label>
</RecordType>