force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_163_PRIOR_ACTS_DATE_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_163_PRIOR_ACTS_DATE_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 163 PRIOR ACTS DATE ENDORSEMENT</label>
</RecordType>