force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_166_Definition_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_166_Definition_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 166 Definition Endorsement</label>
</RecordType>