force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_167_DISCIPLINARY_PRACTICE_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_167_DISCIPLINARY_PRACTICE_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 167 DISCIPLINARY/PRACTICE ENDORSEMENT</label>
</RecordType>