force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_168_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_168_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 168 EXCLUSION ENDORSEMENT</label>
</RecordType>