force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_169_SECURITIES_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_169_SECURITIES_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 169 SECURITIES EXCLUSION ENDORSEMENT</label>
</RecordType>