force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_171_CLAIM_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_171_CLAIM_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 171 CLAIM EXCLUSION ENDORSEMENT</label>
</RecordType>