force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_172_INDIVIDUAL_DISCIPLINARY_PROCEEDINGS_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_172_INDIVIDUAL_DISCIPLINARY_PROCEEDINGS_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 172 INDIVIDUAL DISCIPLINARY PROCEEDINGS EXCLUSION ENDORSEMENT</label>
</RecordType>