force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_173_TERRITORY_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_173_TERRITORY_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 173 TERRITORY EXCLUSION ENDORSEMENT</label>
</RecordType>