force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_174_CLAIM_AND_DISCIPLINARY_PROCEEDINGS_EXCLUSION_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_174_CLAIM_AND_DISCIPLINARY_PROCEEDINGS_EXCLUSION_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 174 CLAIM AND DISCIPLINARY PROCEEDINGS EXCLUSION ENDORSEMENT</label>
</RecordType>