force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_175_PREDECESSOR_FIRM_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_175_PREDECESSOR_FIRM_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 175 PREDECESSOR FIRM ENDORSEMENT</label>
</RecordType>