force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_176_ENTITY_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_176_ENTITY_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 176 ENTITY ENDORSEMENT</label>
</RecordType>