force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_176A_ENTITY_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_176A_ENTITY_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 176A ENTITY ENDORSEMENT</label>
</RecordType>