force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_177_DISCIPLINARY_PROCEEDINGS_COVERAGE_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_177_DISCIPLINARY_PROCEEDINGS_COVERAGE_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 177 DISCIPLINARY PROCEEDINGS COVERAGE ENDORSEMENT</label>
</RecordType>