force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_178_DEDUCTIBLE_AND_DEFENSE_ENDORSEMENT_EVENTTYPEDESC.recordType-meta.xml
<RecordType>
    <fullName>IL_178_DEDUCTIBLE_AND_DEFENSE_ENDORSEMENT_EVENTTYPEDESC</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 178 DEDUCTIBLE AND DEFENSE ENDORSEMENT EVENTTYPEDESC</label>
</RecordType>