force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_179_CLAIM_EXPENSE_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_179_CLAIM_EXPENSE_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 179 CLAIM EXPENSE ENDORSEMENT</label>
</RecordType>