force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_200_PAST_ACTS_COVERAGE_BUYBACK_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_200_PAST_ACTS_COVERAGE_BUYBACK_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 200 PAST ACTS COVERAGE BUYBACK ENDORSEMENT</label>
</RecordType>