force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_210_SEPARATELY_OWNED_TITLE_AGENCY.recordType-meta.xml
<RecordType>
    <fullName>IL_210_SEPARATELY_OWNED_TITLE_AGENCY</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 210 SEPARATELY OWNED TITLE AGENCY</label>
</RecordType>