force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_230_ANNUAL_AGGREGATE_DEDUCTIBLE_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_230_ANNUAL_AGGREGATE_DEDUCTIBLE_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 230 ANNUAL AGGREGATE DEDUCTIBLE ENDORSEMENT</label>
</RecordType>