force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_232_ANNUAL_AGGREGATE_DEDUCTIBLE.recordType-meta.xml
<RecordType>
    <fullName>IL_232_ANNUAL_AGGREGATE_DEDUCTIBLE</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 232 ANNUAL AGGREGATE DEDUCTIBLE</label>
</RecordType>