force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_234_LOSS_ONLY_DEDUCTIBLE_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_234_LOSS_ONLY_DEDUCTIBLE_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 234 LOSS ONLY DEDUCTIBLE ENDORSEMENT</label>
</RecordType>