force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_245_Disciplinary_Exclusion_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_245_Disciplinary_Exclusion_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 245 Disciplinary Exclusion Endorsement</label>
</RecordType>