force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_246_Claim_Expense_Exclusion.recordType-meta.xml
<RecordType>
    <fullName>IL_246_Claim_Expense_Exclusion</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 246 Claim Expense Exclusion</label>
</RecordType>