force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_247_Incident_Circumstance_Claim_Expense_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_247_Incident_Circumstance_Claim_Expense_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 247 Incident/Circumstance Claim Expense Endorsement</label>
</RecordType>