force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_248_Death_Total_And_Permanent_Disability_Or_U_S_Active_Duty_MilitaryService.recordType-meta.xml
<RecordType>
    <fullName>IL_248_Death_Total_And_Permanent_Disability_Or_U_S_Active_Duty_MilitaryService</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 248 Death, Total And Permanent Disability, Or Military Exclusion For Insureds</label>
</RecordType>