force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_249_Death_Total_And_Permanent_Disability_Or_US_Active_Duty_Military_Service.recordType-meta.xml
<RecordType>
    <fullName>IL_249_Death_Total_And_Permanent_Disability_Or_US_Active_Duty_Military_Service</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 249 Death,Total And Permanent Disability, Or U.S Active Duty Military Service</label>
</RecordType>