force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_250_Disciplinary_Limit_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_250_Disciplinary_Limit_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 250 Disciplinary Limit Endorsement</label>
</RecordType>