force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_251_Past_Acts_Coverage_Buyback_Direct_Liability_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_251_Past_Acts_Coverage_Buyback_Direct_Liability_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 251 Past Acts Coverage Buyback Direct Liability Endorsement</label>
</RecordType>