force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_252_Three_Sets_of_Limit_of_Liability_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_252_Three_Sets_of_Limit_of_Liability_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 252 Three Sets of Limit of Liability Endorsement</label>
</RecordType>