force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_260_Past_Acts_Coverage_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_260_Past_Acts_Coverage_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 260 Past Acts Coverage Endorsement</label>
</RecordType>