force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_261_Claim_Expenses_Outside_the_Policy_Limits_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_261_Claim_Expenses_Outside_the_Policy_Limits_Endorsement</fullName>
    <active>true</active>
    <label>IL 261 Claim Expenses Outside the Policy Limits Endorsement</label>
</RecordType>