force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_262_Amended_Definition_of_Professional_Services_Arbitration_and_Mediation.recordType-meta.xml
<RecordType>
    <fullName>IL_262_Amended_Definition_of_Professional_Services_Arbitration_and_Mediation</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 262 Amended Definition of Professional Services - Arbitration and Mediation</label>
</RecordType>