force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_301_Amendment_of_EXTENDED_REPORTING_PERIOD_Options_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>IL_301_Amendment_of_EXTENDED_REPORTING_PERIOD_Options_Endorsement</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 301 Amendment of EXTENDED REPORTING PERIOD Options Endorsement</label>
</RecordType>