force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_302_AMENDMENT_OF_EXTENDED_REPORTING_PERIOD_OPTIONS_ENDORSEMENT.recordType-meta.xml
<RecordType>
    <fullName>IL_302_AMENDMENT_OF_EXTENDED_REPORTING_PERIOD_OPTIONS_ENDORSEMENT</fullName>
    <active>true</active>
    <description>Descriptive</description>
    <label>IL 302 AMENDMENT OF EXTENDED REPORTING PERIOD OPTIONS ENDORSEMENT</label>
</RecordType>