force-app/main/default/objects/Policy_Endorsement__c/recordTypes/IL_303_Additional_Exclusion_Endorsement_Funds_Disbursements.recordType-meta.xml
<RecordType>
    <fullName>IL_303_Additional_Exclusion_Endorsement_Funds_Disbursements</fullName>
    <active>true</active>
    <label>IL 303 Additional Exclusion Endorsement - Funds Disbursements</label>
</RecordType>