force-app/main/default/objects/Policy_Endorsement__c/recordTypes/RP_Reinstate_Policy_Transaction.recordType-meta.xml
<RecordType>
    <fullName>RP_Reinstate_Policy_Transaction</fullName>
    <active>true</active>
    <description>Functional</description>
    <label>IL 191 Reinstatement Notice</label>
</RecordType>