force-app/main/default/objects/Policy_Endorsement__c/validationRules/Account_Should_Be_Same_As_Policy.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Should_Be_Same_As_Policy</fullName>
    <active>true</active>
    <description>Account for functional endorsements of Lawyer should be same as the Account on Policy.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;AL_Add_Lawyer_Transaction&apos;,  Account__c &lt;&gt;  Policy__r.Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account should be same as that on Policy!</errorMessage>
</ValidationRule>