force-app/main/default/objects/Policy_Endorsement__c/validationRules/Cancel_Date_Cannot_Exceed_Expire_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Date_Cannot_Exceed_Expire_Date</fullName>
    <active>true</active>
    <description>Endorsement Effective Date for Cancel Policy cannot be greater than Policy Expiration Date.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CP_Cancel_Policy_Transaction&apos;, Endorsement_Effective_Date__c &gt; Policy__r.Expiration_Date__c)</errorConditionFormula>
    <errorDisplayField>Endorsement_Effective_Date__c</errorDisplayField>
    <errorMessage>Cancel Date cannot be greater than Policy Expiration Date!</errorMessage>
</ValidationRule>